--- a/.travis.yml
+++ b/.travis.yml
@@ -2,4 +2,9 @@ sudo: false
 language: ruby
 rvm:
   - 2.3.0
-before_install: gem install bundler -v 1.13.7
+before_install: 
+  - gem install bundler -v 1.13.7
+  - gem install rubocop
+script:
+  - rubocop --fail-level=W
+  - bundle exec rspec
