Support Array type parameter on get/get_big method

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -6,3 +6,5 @@ Style/EmptyLinesAroundModuleBody:
   Enabled: false
 Style/EmptyLinesAroundClassBody:
   Enabled: false
+Style/NumericLiterals:
+  Enabled: false
